# opencode-selector

./: .gitignore  AGENTS.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  README.md  cliff.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: ci.yml  release.yml
scripts/: install.sh
skills/opencode-selector-compat/: SKILL.md
skills/opencode-selector-dev/: SKILL.md
skills/opencode-selector-release/: SKILL.md
skills/opencode-selector-ui-review/: SKILL.md
src/: cli.rs  config.rs  lib.rs  main.rs  opencode.rs  opencode_theme.rs  upgrade.rs
src/db/: mod.rs  models.rs  repository.rs
src/folders/: mod.rs  model.rs  store.rs
src/tui/: app.rs  events.rs  mod.rs  theme.rs  ui.rs
src/tui/components/: folder_tree.rs  help.rs  mod.rs  preview.rs  search_bar.rs  session_list.rs  status_bar.rs
